@@ -1,3 +1,7 @@
+2001-03-14  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.old-deja/g++.other/regstack.C: New test.
+
 2001-03-11  Nicola Pero <n.pero@mi.flashnet.it>
 
 	* objc/execute/va_method.m: Added.
